example/secondfile/objects/Exception__c.object
<CustomObject>
    <fields>
        <fullName>ATTCustomerSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AT&amp;T Customer Site</label>
        <referenceTo>CustomerSite__c</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EthernetEqpType__c</fullName>
        <label>EthernetEqp_Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EthernetPopCLLi__c</fullName>
        <label>EthernetPopCLLi</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <label>Exception Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Point__c</fullName>
        <label>Function Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptyStage__c</fullName>
        <formula>text(OptyId__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OptyStage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivateLinePopCLLI__c</fullName>
        <label>PrivateLinePopCLLI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPProduct</label>
        <referenceTo>SPProduct__c</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SwcClli__c</fullName>
        <label>SwcClli</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Exception_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Exception_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Function_Point__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All1234</label>
    </listViews>
    <listViews>
        <fullName>MuneeshQuoteLive</fullName>
        <columns>OptyStage__c</columns>
        <columns>SPProduct__c</columns>
        <columns>OptyId__c</columns>
        <columns>ATTCustomerSite__c</columns>
        <columns>NAME</columns>
        <columns>Exception_Message__c</columns>
        <columns>Function_Point__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Function_Point__c</field>
            <operation>equals</operation>
            <value>QuoteIdLive</value>
        </filters>
        <label>MuneeshQuoteLive</label>
    </listViews>
    <listViews>
        <fullName>Saif_G</fullName>
        <columns>NAME</columns>
        <columns>Function_Point__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Saif</value>
        </filters>
        <label>Saif_G</label>
    </listViews>
    <nameField>
        <label>ATTException Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>